Blender Internal: Rendered viewport won't be updated and will crash if active render layer is changed/deleted. #38726

Closed
opened 2014-02-20 09:29:42 +01:00 by Shinsuke Irie · 28 comments
Member

System Information
Ubuntu 13.10 amd64

Blender Version
Broken: 2.69.11 10f4c62
Worked: (maybe) before ee6932aa8

Short description of error
Rendered preview is not updated when active render layer is changed, and Blender can crash after deleting a render layer.

Exact steps for others to reproduce the error
Case 1:

  1. Start Blender
  2. Add a render layer "RenderLayer.001"
  3. Start rendered preview in "RenderLayer.001"
  4. Switch active render layer to "RenderLayer"
    The viewport is not updated anymore.

Case 2:

  1. Start Blender
  2. Add a render layer "RenderLayer.001"
  3. Switch active render layer to "RenderLayer"
  4. Start rendered preview in "RenderLayer"
  5. Delete "RenderLayer"
    Then, zoom-in/out by mouse wheel causes crash.

This bug was introduced by fix for flickering black tiles in preview render (commit ee6932aa8). RE_InitState() in pipeline.c has to clear render result if active render layer is changed. Especially, deleting render layer causes crash by attempting to show the deleted layer.

**System Information** Ubuntu 13.10 amd64 **Blender Version** Broken: 2.69.11 10f4c62 Worked: (maybe) before ee6932aa8 **Short description of error** Rendered preview is not updated when active render layer is changed, and Blender can crash after deleting a render layer. **Exact steps for others to reproduce the error** Case 1: 1. Start Blender 2. Add a render layer "RenderLayer.001" 3. Start rendered preview in "RenderLayer.001" 4. Switch active render layer to "RenderLayer" The viewport is not updated anymore. Case 2: 1. Start Blender 2. Add a render layer "RenderLayer.001" 3. Switch active render layer to "RenderLayer" 4. Start rendered preview in "RenderLayer" 5. Delete "RenderLayer" Then, zoom-in/out by mouse wheel causes crash. This bug was introduced by fix for flickering black tiles in preview render (commit ee6932aa8). RE_InitState() in pipeline.c has to clear render result if active render layer is changed. Especially, deleting render layer causes crash by attempting to show the deleted layer.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by Shinsuke Irie 2014-02-20 09:29:42 +01:00
Author
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke

Added subscriber: @dfelinto

Added subscriber: @dfelinto

confirmed both cases

confirmed both cases

Case 2 (the segfault) happens even if the ee6932aa8 is reverted, so it's not related it seems.

Case 2 (the segfault) happens even if the ee6932aa8 is reverted, so it's not related it seems.

Backtrace for case 2:
(not line-specific, I think something is messed up with my gcc)

  • 0 0x0000000100333da3 in render_result_new ()
  • 1 0x00000001003235ab in do_render_thread ()
  • 2 0x00007fff8d7ba772 in _pthread_start ()
  • 3 0x00007fff8d7a71a1 in thread_start ()
Backtrace for case 2: (not line-specific, I think something is messed up with my gcc) - 0 0x0000000100333da3 in render_result_new () - 1 0x00000001003235ab in do_render_thread () - 2 0x00007fff8d7ba772 in _pthread_start () - 3 0x00007fff8d7a71a1 in thread_start ()
Author
Member

@dfelinto Ah you are right, the cases 1 and 2 are similar but different bugs...

@dfelinto Ah you are right, the cases 1 and 2 are similar but different bugs...

This issue was referenced by blender/blender-addons-contrib@277126881d

This issue was referenced by blender/blender-addons-contrib@277126881d691bc8d4dadfc657f2c2784cb1308f

This issue was referenced by 277126881d

This issue was referenced by 277126881d691bc8d4dadfc657f2c2784cb1308f

Fixed both now, thanks for the report.

Fixed both now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 277126881d.

Closed by commit 277126881d.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

Thanks, but 277126881d fixed only the case 1.
The crash (case 2) still happens, unfortunately.

Yesterday I already tried exact same solution as 277126881d, but couldn't find way to solve the crash.

Thanks, but 277126881d fixed only the case 1. The crash (case 2) still happens, unfortunately. Yesterday I already tried exact same solution as 277126881d, but couldn't find way to solve the crash.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Hopefully really solved now in {1a79abdad2443ff9f12e7efd95ee78a264a9d60a}, I can't get it to crash anymore at least.

Hopefully really solved now in {1a79abdad2443ff9f12e7efd95ee78a264a9d60a}, I can't get it to crash anymore at least.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

Um, the crash seems to be fixed but another problem happens.

If we have RenderLayer1 and RenderLayer2 for example, after deleting RenderLayer1 the rendered preview still shows RenderLayer1 rather than RenderLayer2. Somewhere we have to check if render layer was deleted.

Reopening this anyway...

Um, the crash seems to be fixed but another problem happens. If we have RenderLayer1 and RenderLayer2 for example, after deleting RenderLayer1 the rendered preview still shows RenderLayer1 rather than RenderLayer2. Somewhere we have to check if render layer was deleted. Reopening this anyway...
Author
Member

I made a patch D346. So far it works fine for me though it's only workaround.

I made a patch [D346](https://archive.blender.org/developer/D346). So far it works fine for me though it's only workaround.

This issue was referenced by blender/blender-addons-contrib@a856b123ff

This issue was referenced by blender/blender-addons-contrib@a856b123ff1798860cdfee1927d5c7452fa87ed3

This issue was referenced by a856b123ff

This issue was referenced by a856b123ff1798860cdfee1927d5c7452fa87ed3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a856b123ff.

Closed by commit a856b123ff.
Author
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Member

The problem still isn't resolved, deleting/adding render layer doesn't update viewport...
The following functions should need DAG_id_tag_update():

render_layer_add_exec()
render_layer_remove_exec()
rna_RenderLayer_new()
rna_RenderLayer_remove()

The problem still isn't resolved, deleting/adding render layer doesn't update viewport... The following functions should need DAG_id_tag_update(): render_layer_add_exec() render_layer_remove_exec() rna_RenderLayer_new() rna_RenderLayer_remove()

Committed the DAG updates now in {49e8cfd809fe578a20ef266469362b157620729c}.

Committed the DAG updates now in {49e8cfd809fe578a20ef266469362b157620729c}.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Thanks, it works fine now. :)

Thanks, it works fine now. :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38726
No description provided.