Fix T38726: blender internal viewport render crash when deleting render layer.